--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-native": "0.68.2",
+    "react-native-video": "^5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
