--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
+    "react-native-reanimated": "*",
     "react-native-video": "*"
   },
   "devDependencies": {
@@ -47,14 +48,16 @@
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^27.4.6",
     "eslint": "^7.32.0",
-    "react-native-video": "^5",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^7.0.4",
     "jest": "^27.4.7",
     "lint-staged": "^11.1.2",
     "metro-react-native-babel-preset": "^0.67.0",
+    "prettier": "^2.7.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-reanimated": "^2.9.1",
+    "react-native-video": "^5",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.6.4"
   },
@@ -67,6 +70,9 @@
       "jsx",
       "json",
       "node"
+    ],
+    "setupFilesAfterEnv": [
+      "./jest-setup.js"
     ]
   },
   "lint-staged": {
