--- a/example/package.json
+++ b/example/package.json
@@ -12,19 +12,20 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-reanimated": "^2.9.1",
     "react-native-video": "^5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^3.0.1",
+    "@types/jest": "^27.4.0",
     "@types/react-native": "^0.67.3",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
-    "eslint": "^7.32.0",
-    "@react-native-community/eslint-config": "^3.0.1",
-    "@types/jest": "^27.4.0",
     "babel-jest": "^27.4.6",
+    "eslint": "^7.32.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^27.4.7",
     "metro-react-native-babel-preset": "^0.67.0",
