--- a/example/package.json
+++ b/example/package.json
@@ -11,10 +11,14 @@
     "postinstall": "patch-package --patch-dir '../patches'"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "patch-package": "^6.4.7",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-reanimated": "^2.9.1",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.15.0",
     "react-native-video": "^5"
   },
   "devDependencies": {
