--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "react-test-renderer": "17.0.2",
     "typescript": "^4.6.4"
   },
+  "resolutions": {
+    "@types/react": "*"
+  },
   "jest": {
     "preset": "react-native",
     "moduleFileExtensions": [
