--- a/example/package.json
+++ b/example/package.json
@@ -7,8 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "postinstall": "patch-package --patch-dir '../patches'"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
@@ -16,7 +15,7 @@
     "patch-package": "^6.4.7",
     "react": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-reanimated": "^2.9.1",
+    "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-video": "^5"
