--- a/example/package.json
+++ b/example/package.json
@@ -18,7 +18,8 @@
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
-    "react-native-video": "^5"
+    "react-native-video": "^5",
+    "react-native-video-cache-control": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
