--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "react": "*",
     "react-native": "*",
     "react-native-reanimated": ">=2.10.0",
-    "react-native-video": "*"
+    "react-native-video": "*",
+    "react-native-video-cache-control": ">=1.1.1"
   },
   "devDependencies": {
+    "react-native-video-cache-control": "^1.1.1",
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@commitlint/cli": "^16.1.0",
