feat(UNT-T10221): add close transition effect on multistory and avatar

--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -19,6 +19,8 @@ target 'RNStoryView' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
   target 'RNStoryViewTests' do
     inherit! :complete
     # Pods for testing
