--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
   ],
   "license": "MIT",
   "files": [
-    "/lib",
-    "README.md",
-    "/patches"
+    "/lib"
   ],
   "scripts": {
     "prepare": "husky install",
@@ -35,7 +33,8 @@
     "react-native": "*",
     "react-native-reanimated": ">=2.10.0",
     "react-native-video": "*",
-    "react-native-video-cache-control": ">=1.1.1"
+    "react-native-video-cache-control": ">=1.1.1",
+    "react-native-gesture-handler": ">=2.5.0"
   },
   "devDependencies": {
     "react-native-video-cache-control": "^1.1.1",
@@ -61,10 +60,11 @@
     "prettier": "^2.7.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-video": "^5",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.6.4"
+    "typescript": "4.7.4"
   },
   "resolutions": {
     "@types/react": "*"
@@ -80,7 +80,12 @@
       "node"
     ],
     "setupFilesAfterEnv": [
+      "./node_modules/react-native-gesture-handler/jestSetup.js",
       "./jest-setup.js"
+    ],
+    "modulePathIgnorePatterns" :[
+      "./src/components/MultiStoryContainer/__tests__",
+      "./src/components/StoryAvatar/__tests__"
     ]
   },
   "lint-staged": {
