--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -1,7 +1,8 @@
+ENV['USE_HERMES'] = '0'
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '11.0'
+platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
 
 target 'RNStoryView' do
