feat(UNT-T17807): release v0.0.3

--- a/package.json
+++ b/package.json
@@ -17,7 +17,26 @@
     "typescript",
     "story-view",
     "status-view",
-    "rn"
+    "rn",
+    "rn-story-view",
+    "story",
+    "status",
+    "animated-story",
+    "animated-status",
+    "react-native-story-view",
+    "react-native-status-view",
+    "react-native-story",
+    "react-native-status",
+    "react-native-animated-story",
+    "react-native-animated-status",
+    "gesture-story",
+    "component",
+    "react-native-component",
+    "android",
+    "ios",
+    "animation",
+    "react-reaction",
+    "react-component"
   ],
   "license": "MIT",
   "files": [
