--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "files": [
     "/lib"
   ],
-  "private": "true",
+  "private": true,
   "scripts": {
     "prepare": "husky install",
     "clean": "rm -rf node_modules",
