fix(UNT-T20166): hide content when click on text input (issue 58)

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "/lib"
   ],
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky install && yarn build",
     "clean": "rm -rf node_modules",
     "build": "rm -rf lib && tsc -p . && cp -R ./src/assets ./lib/ ",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
