fix(UNT-T21993):  storyview the app crashes when open multi-story view screen

--- a/package.json
+++ b/package.json
@@ -83,8 +83,8 @@
     "prettier": "^2.7.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-gesture-handler": "^2.5.0",
-    "react-native-reanimated": "^3.2.0",
+    "react-native-gesture-handler": "2.13.4",
+    "react-native-reanimated": "3.5.4",
     "react-native-video": "^5",
     "react-native-video-cache-control": "^1.1.1",
     "react-test-renderer": "17.0.2",
