--- a/example/package.json
+++ b/example/package.json
@@ -15,8 +15,8 @@
     "patch-package": "^6.4.7",
     "react": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-gesture-handler": "^2.5.0",
-    "react-native-reanimated": "^3.2.0",
+    "react-native-gesture-handler": "2.13.4",
+    "react-native-reanimated": "3.5.4",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-video": "^5",
