--- a/example/.gitignore
+++ b/example/.gitignore
@@ -20,6 +20,8 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
+ios/.xcode.env.local
+
 
 # Android/IntelliJ
 #
@@ -30,6 +32,9 @@ local.properties
 *.iml
 *.hprof
 yarn.lock
+.cxx/
+*.keystore
+!debug.keystore
 
 # node.js
 #
@@ -37,11 +42,7 @@ node_modules/
 npm-debug.log
 yarn-error.log
 
-# BUCK
-buck-out/
-\.buckd/
-*.keystore
-!debug.keystore
+
 
 # fastlane
 #
@@ -50,9 +51,14 @@ buck-out/
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/
 
-*/fastlane/report.xml
-*/fastlane/Preview.html
-*/fastlane/screenshots
+**/fastlane/report.xml
+**/fastlane/Preview.html
+**/fastlane/screenshots
+**/fastlane/test_output
+
+
+# Temporary files created by Metro to check the health of the file watcher
+.metro-health-check*
 
 # Bundle artifact
 *.jsbundle
