--- a/example/package.json
+++ b/example/package.json
@@ -13,14 +13,13 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "patch-package": "^6.4.7",
-    "react": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-gesture-handler": "^2.5.0",
-    "react-native-reanimated": "^3.2.0",
+    "react": "18.2.0",
+    "react-native": "0.71.16",
+    "react-native-gesture-handler": "2.13.4",
+    "react-native-reanimated": "3.5.4",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
-    "react-native-video": "^5",
-    "react-native-video-cache-control": "^1.1.1"
+    "react-native-video": "^5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
