--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
     "esModuleInterop": true,
@@ -11,7 +12,7 @@
     },
     "skipLibCheck": true,
     "strict": true,
-    "target": "ESNext",
+    "target": "ESNext"
   },
   "include": ["src"]
 }
