--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -22,7 +22,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:7.0.4")
+        classpath("com.android.tools.build:gradle:7.2.2")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:4.1.2")
         // NOTE: Do not place your application dependencies here; they belong
@@ -54,6 +54,11 @@ allprojects {
         }
         google()
         maven { url 'https://www.jitpack.io' }
-        jcenter()
+        jcenter(){
+               content {
+                includeModule("com.yqritc", "android-scalablevideoview")
+                 includeModule("com.danikula", "videocache")
+    }
+        }
     }
 }
