--- a/example/package.json
+++ b/example/package.json
@@ -13,31 +13,33 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "patch-package": "^6.4.7",
-    "react": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "18.2.0",
+    "react-native": "0.73.4",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-reanimated": "^3.2.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
-    "react-native-video": "^5",
-    "react-native-video-cache-control": "^1.1.1"
+    "react-native-video": "^5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^3.0.1",
-    "@types/jest": "^27.4.0",
-    "@types/react-native": "^0.67.3",
-    "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "babel-jest": "^27.4.6",
-    "eslint": "^7.32.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "jest": "^27.4.7",
-    "metro-react-native-babel-preset": "^0.67.0",
-    "react-test-renderer": "17.0.2",
-    "typescript": "^4.6.4"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/babel-preset": "0.73.21",
+    "@react-native/eslint-config": "0.73.2",
+    "@react-native/metro-config": "0.73.5",
+    "@react-native/typescript-config": "0.73.1",
+    "@types/react": "^18.2.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.6.3",
+    "eslint": "^8.19.0",
+    "jest": "^29.6.3",
+    "prettier": "2.8.8",
+    "react-test-renderer": "18.2.0",
+    "typescript": "5.0.4"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "resolutions": {
     "@types/react": "^18.0.9"
@@ -54,3 +56,4 @@
     ]
   }
 }
+
