--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -229,6 +229,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.danikula:videocache:2.7.1'
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     //noinspection GradleDynamicVersion
