--- a/example/package.json
+++ b/example/package.json
@@ -19,7 +19,8 @@
     "react-native-reanimated": "3.5.4",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
-    "react-native-video": "^5"
+    "react-native-video": "^5",
+    "react-native-video-cache-control": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
