--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "typescript": "4.7.4"
   },
   "resolutions": {
-    "@types/react": "*"
+    "@types/react": "*",
+    "react-native-reanimated": ">=3.5.4"
   },
   "jest": {
     "preset": "react-native",
